--- a/ClientUi/src/main/resources/templates/patient/update.html
+++ b/ClientUi/src/main/resources/templates/patient/update.html
@@ -13,30 +13,30 @@
 	</div>
 
 	<div class="row">
-		<form action="#" th:action="@{/patient/update/{id}(id=${info.id})}" th:object="${info}" method="post" class="form-horizontal" style="width: 100%">
+		<form action="#" th:action="@{/patient/update/{id}(id=${patientInfo.id})}" th:object="${patientInfo}" method="post" class="form-horizontal" style="width: 100%">
 			 <div class="form-group">
-				<label for="fullname" class="col-sm-2 control-label">Family</label>
+				<label for="family" class="col-sm-2 control-label">Family</label>
 				<div class="col-sm-10">
 					<input type="text" th:field="*{family}" id="family" placeholder="Family name" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('family')}" th:errors="*{family}"></p>
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="username" class="col-sm-2 control-label">Given</label>
+				<label for="given" class="col-sm-2 control-label">Given</label>
 				<div class="col-sm-10">
 					<input type="text" th:field="*{given}" id="given" placeholder="Given Name" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('given')}" th:errors="*{given}"></p>
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="password" class="col-sm-2 control-label">Date of birth</label>
+				<label for="dob" class="col-sm-2 control-label">Date of birth</label>
 				<div class="col-sm-10">
 					<input type="date" th:field="*{dob}" id="dob" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('dob')}" th:errors="*{dob}"></p>
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="password" class="col-sm-2 control-label">Sex</label>
+				<label for="sex" class="col-sm-2 control-label">Sex</label>
 				<div class="col-sm-10">
 					<label class="checkbox-inline"><input type="radio" th:field="*{sex}" th:value="F">Female</label>
 					<label class="checkbox-inline"><input type="radio" th:field="*{sex}" th:value="M">Male</label>
@@ -44,14 +44,14 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="username" class="col-sm-2 control-label">Address</label>
+				<label for="address" class="col-sm-2 control-label">Address</label>
 				<div class="col-sm-10">
 					<input type="text" th:field="*{address}" id="address" placeholder="Postal address" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="username" class="col-sm-2 control-label">Phone number</label>
+				<label for="phone" class="col-sm-2 control-label">Phone number</label>
 				<div class="col-sm-10">
 					<input type="text" th:field="*{phone}" id="phone" placeholder="Phone number" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></p>
@@ -61,7 +61,7 @@
 			 <div class="form-group">
 				<div class="col-sm-12">
 					<a class="btn btn-danger btn-sm" href="/patient/list">Cancel</a>
-					<input class="btn btn-primary btn-sm" type="submit" value="Update patient info">
+					<input class="btn btn-primary btn-sm" type="submit" value="Update patient patientInfo">
 				</div>
 			</div>
 		</form>
