--- a/ClientUi/src/main/resources/templates/patient/add.html
+++ b/ClientUi/src/main/resources/templates/patient/add.html
@@ -3,13 +3,13 @@
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8"/>
-<title>Home</title>
+<title>Add patientInfo</title>
 <link rel="stylesheet" href="../../css/bootstrap.min.css" >
 </head>
 <body>
 <div class="container">
 	<div class="row">
-		<h2>Update Bid</h2>
+		<h2>Add patient info</h2>
 	</div>
 
 	<div class="row">
@@ -60,7 +60,7 @@
 			 <div class="form-group">
 				<div class="col-sm-12">
 					<a class="btn btn-danger btn-sm" href="/patient/list">Cancel</a>
-					<input class="btn btn-primary btn-sm" type="submit" value="Add patient patientInfo">
+					<input class="btn btn-primary btn-sm" type="submit" value="Add patientInfo">
 				</div>
 			</div>
 		</form>
