--- a/ClientUi/src/main/resources/templates/patient/list.html
+++ b/ClientUi/src/main/resources/templates/patient/list.html
@@ -3,7 +3,7 @@
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8"/>
-<title>Home</title>
+<title>Patient info list</title>
 <link rel="stylesheet" href="../../css/bootstrap.min.css" >
 </head>
 <body>
@@ -13,7 +13,7 @@
 			<a href="/patient/list">Patient List</a>
 		</div>
 	</div>
-	<div class="row"><h2>Patient patientInfo List</h2></div>
+	<div class="row"><h2>PatientInfo List</h2></div>
 	<div class="row">
 		<a href="/patient/add" class="btn btn-primary btn-sm">Add New</a>
 		<table class="table table-bordered">
@@ -26,6 +26,7 @@
 					<th>Sex</th>
 					<th>Address</th>
 					<th>Phone</th>
+					<th>Actions</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -37,8 +38,9 @@
 					<td th:text="${patientInfo.sex}"></td>
 					<td th:text="${patientInfo.address}"></td>
 					<td th:text="${patientInfo.phone}"></td>
-					<td style="width: 7%" class="text-center">
-						<a th:href="@{/patient/update/{id}(id=${patientInfo.id})}">Edit</a>
+					<td style="width: 12%" class="text-center">
+						<a th:href="@{/patient/update/{id}(id=${patientInfo.id})}">Edit</a> &nbsp | &nbsp
+						<a th:href="@{/patHistory/patient?patId={id}(id=${patientInfo.id})}">Notes</a>
 					</td>
 				</tr>
 			</tbody>
