--- a/ClientUi/src/main/resources/templates/patient/update.html
+++ b/ClientUi/src/main/resources/templates/patient/update.html
@@ -3,13 +3,13 @@
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8"/>
-<title>Home</title>
+<title>Patient info update</title>
 <link rel="stylesheet" href="../../css/bootstrap.min.css" >
 </head>
 <body>
 <div class="container">
 	<div class="row">
-		<h2>Update Bid</h2>
+		<h2>Update patient info</h2>
 	</div>
 
 	<div class="row">
