--- a/ClientUi/src/main/resources/templates/notes/add.html
+++ b/ClientUi/src/main/resources/templates/notes/add.html
@@ -13,15 +13,9 @@
 	</div>
 
 	<div class="row">
-		<form action="#" th:action="@{/patHistory/add}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
-			 <input type="hidden" th:field="*{patId}" id="patId" th:value="${patId}">
-			 <div class="form-group">
-				<label for="patient" class="col-sm-2 control-label">Patient</label>
-				<div class="col-sm-10">
-					<input type="text" th:field="*{patient}" id="patient" placeholder="Patient" class="col-4">
-					<p class="text-danger" th:if="${#fields.hasErrors('patient')}" th:errors="*{patient}"></p>
-				</div>
-			</div>
+		<form action="#" th:action="@{/patHistory/add/{id}(id=${note.patId})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
+			 <input type="hidden" th:field="*{patId}" id="patId" th:value="${note.patId}">
+			 <input type="hidden" th:field="*{patient}" id="patient" th:value="${note.patient}">
 			<div class="form-group">
 				<label for="note" class="col-sm-2 control-label">Note</label>
 				<div class="col-sm-10">
@@ -31,7 +25,7 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-12">
-					<a class="btn btn-danger btn-sm" href="/patient/list">Cancel</a>
+					<a class="btn btn-danger btn-sm" th:href="@{/patHistory/patient?patId={patId}(patId=${note.patId})}">Cancel</a>
 					<input class="btn btn-primary btn-sm" type="submit" value="Add Note">
 				</div>
 			</div>
