Refactor for integration.

--- a/ClientUi/src/main/resources/templates/notes/history.html
+++ b/ClientUi/src/main/resources/templates/notes/history.html
@@ -21,12 +21,14 @@
 				<tr>
 					<th>Patient Id</th>
 					<th>Patient</th>
+					<th>Assessment</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td th:text="${patId}"></td>
 					<td th:text="${patient}"></td>
+					<td th:text="${assessment}"></td>
 				</tr>
 			</tbody>
 		</table>
