--- a/ClientUi/src/main/resources/templates/patient/list.html
+++ b/ClientUi/src/main/resources/templates/patient/list.html
@@ -10,7 +10,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-6">
-			<a href="/patient/list">Patient List</a>
+			<a href="/patient/list">Patient List</a> &nbsp | &nbsp
+			<a href="/patient/search">Patient Search</a>
 		</div>
 	</div>
 	<div class="row"><h2>PatientInfo List</h2></div>
