--- a/ClientUi/src/main/resources/templates/notes/add.html
+++ b/ClientUi/src/main/resources/templates/notes/add.html
@@ -13,13 +13,13 @@
 	</div>
 
 	<div class="row">
-		<form action="#" th:action="@{/patHistory/add/{id}(id=${note.patId})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
+		<form action="#" th:action="@{/patHistory/add/{id}(id=${note.patId})}" th:object="${note}" method="post" class="form-horizontal" id = "myform" style="width: 100%">
 			 <input type="hidden" th:field="*{patId}" id="patId" th:value="${note.patId}">
 			 <input type="hidden" th:field="*{patient}" id="patient" th:value="${note.patient}">
 			<div class="form-group">
 				<label for="note" class="col-sm-2 control-label">Note</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{note}" id="note" placeholder="note" class="col-4">
+					<textarea  rows = "10" cols = "80" th:field = "*{note}" form = "myform" ></textarea>
 					<p class="text-danger" th:if="${#fields.hasErrors('note')}" th:errors="*{note}"></p>
 				</div>
 			</div>
